--- a/R/dourghtROM_gee.Rmd
+++ b/R/dourghtROM_gee.Rmd
@@ -65,7 +65,7 @@ MOD_LE_ext <- ee_extract(x = MOD_LE, y = drought %>% st_centroid(), fun = ee$Red
 save.image(here("data","droughtData.RData"))
 ```
 
-```{r clean_ts, eval = FALSE} 
+```{r clean_tss, eval = FALSE} 
 clean_ext <- function(ext, group_var, var, months = 3:10, years = 2002:2020, replacer){
     quo_group_var <- enquo(group_var)
     ext_clean <- ext %>%
